--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -30,7 +30,7 @@ last-updated: 2020-10-30 5:55 PM
 </div>
 <div class="blogcard mb-4" style="width: 100%;">
   <div class="card-body">
-    <p>lolo</p>
+    <p>lolol</p>
   </div>
 </div>
 <!-- Past Porjects -->
