--- a/css/main.css
+++ b/css/main.css
@@ -558,7 +558,7 @@ border-radius: 0%;
   background: #fff;
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-  padding: 14px 80px 18px 36px;
+  padding: 14px 36px;
   cursor: pointer;
 }
 
@@ -601,7 +601,7 @@ background-image: url(/assets/img/icons/graphicsurf-com-research-vectors/PNG/res
 
 @media(max-width: 990px){
 .blogcard{
-  margin: 20px;
+  margin: 2px;
 }
 } 
 
@@ -697,4 +697,15 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
   margin-left: auto;
   margin-right: auto;
   width: 80%;
+}
+
+/* Flexbox */
+#inner {  
+  border: 0.05em solid black;
+}
+
+#outer {
+  width:100%;
+  display: flex;
+  justify-content: center;
 }
