--- a/_layouts/personal.html
+++ b/_layouts/personal.html
@@ -7,4 +7,9 @@ last-updated: 2020-10-30 5:55 PM
 ---
 {% assign theme = site.data.themes[site.ui_theme] %}
 
-<p> Under construction </p>
+<div class="blogcard mb-4" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">Places Visited</h5>
+    </div>
+  </div>
+  <iframe src="https://www.google.com/maps/d/embed?mid=1K2rZWR7KrMs1S3KOGCaRCWah4ei8nfg&ehbc=2E312F" width="100%" height="480"></iframe>
