Added formlabs intern detail and updated projects

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default navbar-fixed-bottom" style="background-color:{{theme.nav-color}};">
   <div class="container">
-    <p class="navbar-text pull-left" style="font-family:{{ theme.link-font }};color:{{ theme.nav-text}};">© 2023, Aagam Shah
+    <p class="navbar-text pull-left" style="font-family:{{ theme.link-font }};color:{{ theme.nav-text}};">© 2023 - 2024, Aagam Shah
     </p>
     <p class="navbar-text pull-right">
             {% include social-footer.html %}
