--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -10,10 +10,10 @@ last-updated: 2020-10-30 5:55 PM
 ---
 {% assign theme = site.data.themes[site.ui_theme] %}
 <!-- Page Content -->
-<!-- Current Projects -->
+<!-- Recent Projects -->
 <div class="blogcard mb-4" style="width: 100%;">
   <div class="card-body">
-    <h5 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">Current Projects</h5>
+    <h5 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">Recent Projects</h5>
   </div>
 </div>
 <div class="row">
